--- a/pages/1gol1tempo/1gol1tempo.html
+++ b/pages/1gol1tempo/1gol1tempo.html
@@ -13,88 +13,78 @@
 </head>
 
 <body>
-  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 10/03/2024 +0.5 Gol HT</b></div>
+  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 13/03/2024 +0.5 Gol HT</b></div>
+  <div class="topPaginaPages">Champions League</div>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/champions-league/13-03-2024-atletico-madrid-x-inter-de-milao.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Atlético Madrid x Inter de Milão</b></p>
+            <div class="palpite">
+              <p><b>17:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/champions-league/13-03-2024-borussia-dortmund-x-psv.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Borussia Dortmund x PSV</b></p>
+            <div class="palpite">
+              <p><b>17:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
   <div class="topPaginaPages">Premier League</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://fir3.net/6dpevS" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Aston Villa x Tottenham</b></p>
-            <div class="palpite">
-              <p><b>16:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://fir3.net/gxD3d" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Brighton x Nottingham</b></p>
-            <div class="palpite">
-              <p><b>16:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
   <ul class="accordion-pages">
     <li>
       <a href="https://fir3.net/P8TXoXG0" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>West Ham x Burnley</b></p>
+            <p><b>Bournemouth x Luton</b></p>
             <div class="palpite">
-              <p><b>16:00</b></p>
+              <p><b>16:30</b></p>
             </div>
           </div>
         </div>
       </a>
     </li>
   </ul>
+  <div class="topPaginaPages">Liga dos Campeões da CONCACAF</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/jTQgNXH" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/concacaf-champions-league/13-03-2024-inter-miami-x-nashville-sc.html"
+        target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Bayer Leverkus x Wolfsburg</b></p>
+            <p><b>Inter Miami x Nashville</b></p>
             <div class="palpite">
-              <p><b>16:00</b></p>
+              <p><b>21:15</b></p>
             </div>
           </div>
         </div>
       </a>
     </li>
   </ul>
-  <div class="topPaginaPages">Campeonato Espanhol</div>
+  <div class="topPaginaPages">Copa do Brasil</div>
   <ul class="accordion-pages">
     <li>
       <a href="https://fir3.net/yEz4JH0" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Real Madrid x Celta de Vigo</b></p>
+            <p><b>Nova Iguaçu x Internacional</b></p>
             <div class="palpite">
-              <p><b>16:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <div class="topPaginaPages">Campeonato Goiano</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://fir3.net/LtE8rdWa" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Goiás x Goiânia</b></p>
-            <div class="palpite">
-              <p><b>16:00</b></p>
+              <p><b>20:00</b></p>
             </div>
           </div>
         </div>
