--- a/pages/ResultadoFinal/ResultadoFinal.html
+++ b/pages/ResultadoFinal/ResultadoFinal.html
@@ -13,15 +13,15 @@
 </head>
 
 <body>
-  <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 10/03/2024 Resultado Final</b></div>
+  <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 13/03/2024 Resultado Final</b></div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/X5WtC6wSm" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/champions-league/13-03-2024-borussia-dortmund-x-psv.html" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Real Madrid x Celta de Vigo</b></p>
+            <p><b>Borussia Dortmund x PSV</b></p>
             <div class="palpite">
-              <p><b>16:00 (Casa ou Empate)</b></p>
+              <p><b>17:00 (Casa)</b></p>
             </div>
           </div>
         </div>
@@ -30,12 +30,12 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/t2Kbzs5Z" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/13-03-2024-nova-iguacu-x-internacional.html" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Bayer Leverkussen x Wolfsburg</b></p>
+            <p><b>Nova Iguaçu x Internacional</b></p>
             <div class="palpite">
-              <p><b>16:00 (Casa ou Empate)</b></p>
+              <p><b>20:00 (Fora)</b></p>
             </div>
           </div>
         </div>
@@ -44,19 +44,19 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/lN3nld4hbB" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/13-03-2024-sport-x-murici.html" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>PSG x Reims</b></p>
+            <p><b>Sport x Murici</b></p>
             <div class="palpite">
-              <p><b>16:00 (Casa ou Empate)</b></p>
+              <p><b>19:00 (Casa ou Empate)</b></p>
             </div>
           </div>
         </div>
       </a>
     </li>
   </ul>
-  <ul class="accordion-pages">
+  <!--<ul class="accordion-pages">
     <li>
       <a href="https://fir3.net/xf0OrMnBaU" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink" style="background-color: green;">
@@ -97,7 +97,7 @@
         </div>
       </a>
     </li>
-  </ul>
+  </ul>-->
   <div class="btnpositionHome">
     <button type="button" name="btnVoltar" id="btnVoltar" class="clearHome" onclick="voltarInicio()">Voltar</button>
   </div>
