--- a/pages/1gol1tempo/1gol1tempo.html
+++ b/pages/1gol1tempo/1gol1tempo.html
@@ -13,78 +13,93 @@
 </head>
 
 <body>
-  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 13/03/2024 +0.5 Gol HT</b></div>
-  <div class="topPaginaPages">Champions League</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/champions-league/13-03-2024-atletico-madrid-x-inter-de-milao.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Atlético Madrid x Inter de Milão</b></p>
-            <div class="palpite">
-              <p><b>17:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/champions-league/13-03-2024-borussia-dortmund-x-psv.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Borussia Dortmund x PSV</b></p>
-            <div class="palpite">
-              <p><b>17:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <div class="topPaginaPages">Premier League</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://fir3.net/P8TXoXG0" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Bournemouth x Luton</b></p>
-            <div class="palpite">
-              <p><b>16:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <div class="topPaginaPages">Liga dos Campeões da CONCACAF</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/concacaf-champions-league/13-03-2024-inter-miami-x-nashville-sc.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Inter Miami x Nashville</b></p>
-            <div class="palpite">
-              <p><b>21:15</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
+  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 14/03/2024 +0.5 Gol HT</b></div>
   <div class="topPaginaPages">Copa do Brasil</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/yEz4JH0" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-fortaleza-x-retro-fc.html" target="_blank"
+        style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Nova Iguaçu x Internacional</b></p>
+            <p><b>Fortaleza x Retrô FC</b></p>
             <div class="palpite">
-              <p><b>20:00</b></p>
+              <p><b>21:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <div class="topPaginaPages">Liga Europa da UEFA</div>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-rangers-x-benfica.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Rangers x Benfica</b></p>
+            <div class="palpite">
+              <p><b>14:45</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-west-ham-x-freiburg.htm" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>West Ham x Freiburg</b></p>
+            <div class="palpite">
+              <p><b>14:45</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-atalanta-x-sporting.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Atalanta x Sporting</b></p>
+            <div class="palpite">
+              <p><b>17:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-slavia-praha-x-milan.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Slavia Praha x Milan</b></p>
+            <div class="palpite">
+              <p><b>14:45</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-liverpool-x-sparta-praha.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Liverpool x Sparta Praha</b></p>
+            <div class="palpite">
+              <p><b>17:00</b></p>
             </div>
           </div>
         </div>
