--- a/pages/ResultadoFinal/ResultadoFinal.html
+++ b/pages/ResultadoFinal/ResultadoFinal.html
@@ -13,13 +13,59 @@
 </head>
 
 <body>
-  <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 13/03/2024 Resultado Final</b></div>
+  <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 14/03/2024 Resultado Final</b></div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/champions-league/13-03-2024-borussia-dortmund-x-psv.html" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-sao-bernardo-x-corinthians.html"
+        target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Borussia Dortmund x PSV</b></p>
+            <p><b>São Bernardo x Corinthians</b></p>
+            <div class="palpite">
+              <p><b>20:00 (Fora ou Empate)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-fortaleza-x-retro-fc.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Fortaleza x Retrô FC</b></p>
+            <div class="palpite">
+              <p><b>21:30 (Casa)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-bayer-leverkusen-x-qarabag.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Bayer Leverkusen x Qarabağ</b></p>
+            <div class="palpite">
+              <p><b>17:00 (Casa ou Empate)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-liverpool-x-sparta-praha.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Liverpool x Sparta Praha</b></p>
             <div class="palpite">
               <p><b>17:00 (Casa)</b></p>
             </div>
@@ -28,49 +74,7 @@
       </a>
     </li>
   </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/copa-do-brasil/13-03-2024-nova-iguacu-x-internacional.html" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Nova Iguaçu x Internacional</b></p>
-            <div class="palpite">
-              <p><b>20:00 (Fora)</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/copa-do-brasil/13-03-2024-sport-x-murici.html" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Sport x Murici</b></p>
-            <div class="palpite">
-              <p><b>19:00 (Casa ou Empate)</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <!--<ul class="accordion-pages">
-    <li>
-      <a href="https://fir3.net/xf0OrMnBaU" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink" style="background-color: green;">
-          <div class="time">
-            <p><b>Benfica x Estoril</b></p>
-            <div class="palpite" style="color: white;">
-              <p><b>(Vencedor)</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
+  <!--<ul class="accordion-pages" style="background-color: green;">
     <li>
       <a href="https://fir3.net/yEz4JH0" target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
