--- a/pages/2gol1tempo/2gol1tempo.html
+++ b/pages/2gol1tempo/2gol1tempo.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="topPagina">Jogos do dia 09/03/2024 +1.5 ht</div>
+  <!--<div class="topPagina">Jogos do dia 09/03/2024 +1.5 ht</div>
   <div class="topPaginaPages">Premier League</div>
   <ul class="accordion-pages">
     <li>
@@ -42,7 +42,7 @@
           <div class="InfoPartida"><br><br><br></div>
         </div>
     </li>
-  </ul>
+  </ul>-->
   <div class="btnpositionHome">
     <button type="button" name="btnVoltar" id="btnVoltar" class="clearHome" onclick="voltarInicio()">Voltar</button>
   </div>
