--- a/pages/3gol1tempo/3gol1tempo.html
+++ b/pages/3gol1tempo/3gol1tempo.html
@@ -13,31 +13,21 @@
 </head>
 
 <body>
-  <div class="topPagina">Jogos do dia 09/03/2024 +0.5 ht</div>
-  <div class="topPaginaPages">Campeonato Paranaense</div>
+  <div class="topPagina">Jogos do dia 14/03/2024 3 Gols 1º tempo</div>
+  <div class="topPaginaPages">Copa do Brasil</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-paranaense/09-03-2024-coritiba-x-cianorte.html" target="_blank" style="text-decoration: none;" >
-        <div class="dropdownlink"><p>Coritiba <span><b> 0 x 0 </b> </span>  Cianorte </p> 
-          <div class="InfoPartida"><br><br><br>16:00</div>
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-fortaleza-x-retro-fc.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Fortaleza x Retrô FC</b></p>
+            <div class="palpite">
+              <p><b>21:30</b></p>
+            </div>
+          </div>
         </div>
-        
       </a>
-    </li>
-  </ul>
-  <div class="topPaginaPages">Premier League</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-ingles/09-03-2024-manchester-united-x-everton.html" target="_blank" style="text-decoration: none;" >
-        <div class="dropdownlink"><p>Coritiba <span><b> 0 x 0 </b> </span>  Cianorte </p> 
-          <div class="InfoPartida"><br><br><br>16:00</div>
-        </div>
-    </li>
-    <li>
-      <a href="https://fir3.net/arsenalxbrentford" target="_blank" style="text-decoration: none;" >
-        <div class="dropdownlink"><p>Coritiba <span><b> 0 x 0 </b> </span>  Cianorte </p> 
-          <div class="InfoPartida"><br><br><br>16:00</div>
-        </div>
     </li>
   </ul>
   <div class="btnpositionHome">
