--- a/pages/2golsNoJogo/2golsNoJogo.html
+++ b/pages/2golsNoJogo/2golsNoJogo.html
@@ -13,31 +13,97 @@
 </head>
 
 <body>
-  <div class="topPagina">Jogos do dia 09/03/2024 +0.5 ht</div>
-  <div class="topPaginaPages">Campeonato Paranaense</div>
+  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 14/03/2024 2 Gols 90 Min.</b></div>
+  <div class="topPaginaPages">Copa do Brasil</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-paranaense/09-03-2024-coritiba-x-cianorte.html" target="_blank" style="text-decoration: none;" >
-        <div class="dropdownlink"><p>Coritiba <span><b> 0 x 0 </b> </span>  Cianorte </p> 
-          <div class="InfoPartida"><br><br><br>16:00</div>
+      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-fortaleza-x-retro-fc.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Fortaleza x Retrô FC</b></p>
+            <div class="palpite">
+              <p><b>21:30</b></p>
+            </div>
+          </div>
         </div>
-        
       </a>
     </li>
   </ul>
-  <div class="topPaginaPages">Premier League</div>
+  <div class="topPaginaPages">Liga Europa da UEFA</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-ingles/09-03-2024-manchester-united-x-everton.html" target="_blank" style="text-decoration: none;" >
-        <div class="dropdownlink"><p>Coritiba <span><b> 0 x 0 </b> </span>  Cianorte </p> 
-          <div class="InfoPartida"><br><br><br>16:00</div>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-rangers-x-benfica.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Rangers x Benfica</b></p>
+            <div class="palpite">
+              <p><b>14:45</b></p>
+            </div>
+          </div>
         </div>
+      </a>
     </li>
+  </ul>
+  <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/arsenalxbrentford" target="_blank" style="text-decoration: none;" >
-        <div class="dropdownlink"><p>Coritiba <span><b> 0 x 0 </b> </span>  Cianorte </p> 
-          <div class="InfoPartida"><br><br><br>16:00</div>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-west-ham-x-freiburg.htm" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>West Ham x Freiburg</b></p>
+            <div class="palpite">
+              <p><b>14:45</b></p>
+            </div>
+          </div>
         </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-atalanta-x-sporting.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Atalanta x Sporting</b></p>
+            <div class="palpite">
+              <p><b>17:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-slavia-praha-x-milan.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Slavia Praha x Milan</b></p>
+            <div class="palpite">
+              <p><b>14:45</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-liverpool-x-sparta-praha.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Liverpool x Sparta Praha</b></p>
+            <div class="palpite">
+              <p><b>17:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
     </li>
   </ul>
   <div class="btnpositionHome">
@@ -57,27 +123,12 @@
     const database = getDatabase(app);
     const auth = getAuth();
 
-
-    btnSair.addEventListener('click', (e) => {
-        signOut(auth)
-            .then(() => {
-                // Signed in 
-                window.location.href = '../../../login.html';
-                // ...
-            })
-            .catch((err) => {
-                hideLoading();
-                alert(err.message);
-            });
-
-    });
-
     onAuthStateChanged(auth, (user) => {
-        if (!user) {
-            window.location.href = '../../../login.html';
-        };
+      if (!user) {
+        window.location.href = '../../../login.html';
+      };
     });
-</script>
+  </script>
 </body>
 
 </html>
