--- a/pages/2gol1tempo/2gol1tempo.html
+++ b/pages/2gol1tempo/2gol1tempo.html
@@ -13,36 +13,55 @@
 </head>
 
 <body>
-  <!--<div class="topPagina">Jogos do dia 09/03/2024 +1.5 ht</div>
-  <div class="topPaginaPages">Premier League</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://fir3.net/zYFTpHY7Uk" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <p>Arsenal <span><b> 1 x 1 </b> </span> Brentford </p>
-          <div class="InfoPartida"><br><br><br>Green</div>
-        </div>
-
-      </a>
-    </li>
-  </ul>
+  <div class="topPagina">Jogos do dia 16/03/2024 +1.5 ht</div>
   <div class="topPaginaPages">Bundesliga</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/sPPbc0n" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-liverpool-x-sparta-praha.html"
+        target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
-          <p>Werder Bremen <span><b> 0 x 2 </b> </span> Borussia Dortmund </p>
-          <div class="InfoPartida"><br><br><br>Green</div>
+          <div class="time">
+            <p><b>Darmstadt 98 x Bayern München</b></p>
+            <div class="palpite">
+              <p><b>11:30</b></p>
+            </div>
+          </div>
         </div>
+      </a>
     </li>
+  </ul>
+  <div class="topPaginaPages">Campeonato Português</div>
+  <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/arsenalxbrentford" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/campeonato-portugues/16-03-2024-porto-x-vizela.html"
+        target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
-          <p>Werder Bremen <span><b> 0 x 1 </b> </span> Borussia Dortmund </p>
-          <div class="InfoPartida"><br><br><br></div>
+          <div class="time">
+            <p><b>Porto x Vizela</b></p>
+            <div class="palpite">
+              <p><b>17:30</b></p>
+            </div>
+          </div>
         </div>
+      </a>
     </li>
-  </ul>-->
+  </ul>
+  <div class="topPaginaPages">Premier League</div>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-fulham-x-tottenham.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Fulham x Tottenham</b></p>
+            <div class="palpite">
+              <p><b>14:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
   <div class="btnpositionHome">
     <button type="button" name="btnVoltar" id="btnVoltar" class="clearHome" onclick="voltarInicio()">Voltar</button>
   </div>
