--- a/pages/3golsNoJogo/3golsNoJogo.html
+++ b/pages/3golsNoJogo/3golsNoJogo.html
@@ -13,63 +13,33 @@
 </head>
 
 <body>
-  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 14/03/2024 3 Gols 90 min</b></div>
-  <div class="topPaginaPages">Copa do Brasil</div>
+  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 16/03/2024 +2.5 Gols 90 minutos</b></div>
+  <div class="topPaginaPages">Compeonato Goiano</div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-fortaleza-x-retro-fc.html" target="_blank"
-        style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Fortaleza x Retrô FC</b></p>
-            <div class="palpite">
-              <p><b>21:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <div class="topPaginaPages">Liga Europa da UEFA</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-rangers-x-benfica.html" target="_blank"
-        style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Rangers x Benfica</b></p>
-            <div class="palpite">
-              <p><b>14:45</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-west-ham-x-freiburg.htm" target="_blank"
-        style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>West Ham x Freiburg</b></p>
-            <div class="palpite">
-              <p><b>14:45</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-atalanta-x-sporting.html"
+      <a href="https://www.placardefutebol.com.br/campeonato-goiano/16-03-2024-goiania-x-atletico-go.html"
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Atalanta x Sporting</b></p>
+            <p><b>Goiânia x Atlético-GO</b></p>
             <div class="palpite">
-              <p><b>17:00</b></p>
+              <p><b>20:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <div class="topPaginaPages">Premier League</div>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-burnley-x-brentford.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Burnley x Brentford</b></p>
+            <div class="palpite">
+              <p><b>12:00</b></p>
             </div>
           </div>
         </div>
@@ -78,13 +48,89 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-slavia-praha-x-milan.html"
+      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-luton-town-x-nottingham-forest.html"
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Slavia Praha x Milan</b></p>
+            <p><b>Luton Town x Nottingham Forest</b></p>
             <div class="palpite">
-              <p><b>14:45</b></p>
+              <p><b>12:00</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-fulham-x-tottenham.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Fulham x Tottenham</b></p>
+            <div class="palpite">
+              <p><b>14:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <div class="topPaginaPages">Bundesliga</div>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-union-berlin-x-werder-bremen.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Union Berlin x Werder Bremen</b></p>
+            <div class="palpite">
+              <p><b>11:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-wolfsburg-x-augsburg.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Wolfsburg x Augsburg</b></p>
+            <div class="palpite">
+              <p><b>11:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-mainz-05-x-bochum.html" target="_blank"
+        style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Mainz 05 x Bochum</b></p>
+            <div class="palpite">
+              <p><b>11:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-heidenheim-x-borussia-mgladbach.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Heidenheim x Borussia Mgladbach</b></p>
+            <div class="palpite">
+              <p><b>11:30</b></p>
             </div>
           </div>
         </div>
@@ -97,9 +143,24 @@
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Liverpool x Sparta Praha</b></p>
+            <p><b>Darmstadt 98 x Bayern München</b></p>
             <div class="palpite">
-              <p><b>17:00</b></p>
+              <p><b>11:30</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-darmstadt-98-x-bayern-munchen.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Hoffenheim x Stuttgart</b></p>
+            <div class="palpite">
+              <p><b>14:30</b></p>
             </div>
           </div>
         </div>
