--- a/pages/ResultadoFinal/ResultadoFinal.html
+++ b/pages/ResultadoFinal/ResultadoFinal.html
@@ -16,13 +16,13 @@
   <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 14/03/2024 Resultado Final</b></div>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-sao-bernardo-x-corinthians.html"
+      <a href="https://www.placardefutebol.com.br/campeonato-paulista/16-03-2024-palmeiras-x-ponte-preta.html"
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>São Bernardo x Corinthians</b></p>
+            <p><b>Palmeiras x Ponte Preta</b></p>
             <div class="palpite">
-              <p><b>20:00 (Fora ou Empate)</b></p>
+              <p><b>20:00 (Casa)</b></p>
             </div>
           </div>
         </div>
@@ -31,13 +31,28 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/copa-do-brasil/14-03-2024-fortaleza-x-retro-fc.html" target="_blank"
+      <a href="https://www.placardefutebol.com.br/campeonato-mineiro/16-03-2024-cruzeiro-x-tombense.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Cruzeiro x Tombense</b></p>
+            <div class="palpite">
+              <p><b>16:30 (Casa)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-baiano/16-03-2024-bahia-x-jequie.html" target="_blank"
         style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Fortaleza x Retrô FC</b></p>
+            <p><b>Bahia x Jequié</b></p>
             <div class="palpite">
-              <p><b>21:30 (Casa)</b></p>
+              <p><b>16:00 (Casa)</b></p>
             </div>
           </div>
         </div>
@@ -46,13 +61,13 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-bayer-leverkusen-x-qarabag.html"
+      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-darmstadt-98-x-bayern-munchen.html"
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Bayer Leverkusen x Qarabağ</b></p>
+            <p><b>Darmstadt 98 x Bayern München</b></p>
             <div class="palpite">
-              <p><b>17:00 (Casa ou Empate)</b></p>
+              <p><b>11:30 (Fora)</b></p>
             </div>
           </div>
         </div>
@@ -61,27 +76,13 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-liverpool-x-sparta-praha.html"
+      <a href="https://www.placardefutebol.com.br/campeonato-espanhol/16-03-2024-osasuna-x-real-madrid.html"
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Liverpool x Sparta Praha</b></p>
+            <p><b>Osasuna x Real Madrid</b></p>
             <div class="palpite">
-              <p><b>17:00 (Casa)</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <!--<ul class="accordion-pages" style="background-color: green;">
-    <li>
-      <a href="https://fir3.net/yEz4JH0" target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Milan x Bologna</b></p>
-            <div class="palpite">
-              <p><b>16:00 (Casa ou Empate)</b></p>
+              <p><b>12:15 (Fora)</b></p>
             </div>
           </div>
         </div>
@@ -90,18 +91,19 @@
   </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://fir3.net/LtE8rdWa" target="_blank" style="text-decoration: none;">
+      <a href="https://www.placardefutebol.com.br/campeonato-espanhol/16-03-2024-getafe-x-girona.html" target="_blank"
+        style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Goiás x Goiânia</b></p>
+            <p><b>Getafe x Girona</b></p>
             <div class="palpite">
-              <p><b>16:00 (Casa ou Empate)</b></p>
+              <p><b>14:30 (Fora ou Empate)</b></p>
             </div>
           </div>
         </div>
       </a>
     </li>
-  </ul>-->
+  </ul>
   <div class="btnpositionHome">
     <button type="button" name="btnVoltar" id="btnVoltar" class="clearHome" onclick="voltarInicio()">Voltar</button>
   </div>
