--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="/img/Goll.png">
     <link rel="stylesheet" href="/CSS/style.css" />
     <link rel="stylesheet" href="/CSS/global.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2120302517738107"
+     crossorigin="anonymous"></script>
 </head>
 
 
