--- a/pages/register/registro.html
+++ b/pages/register/registro.html
@@ -8,6 +8,8 @@
     <link rel="shortcut icon" href="/img/Gol.png">
     <link rel="stylesheet" href="/CSS/global.css" />
     <link rel="stylesheet" href="/CSS/register.css" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2120302517738107"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
