--- a/pages/1gol1tempo/1gol1tempo.html
+++ b/pages/1gol1tempo/1gol1tempo.html
@@ -10,127 +10,50 @@
   <link rel="stylesheet" href="/CSS/global.css" />
   <link rel="stylesheet" href="/CSS/home.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2120302517738107"
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="topPagina" style="font-size: 20px; text-align: center;"><b>Dia 16/03/2024 +0.5 Gol HT</b></div>
-  <div class="topPaginaPages">Premier League</div>
+  <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 17/03/2024 +0.5 Gol HT</b></div>
+  <!--<ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-paulista/16-03-2024-palmeiras-x-ponte-preta.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Palmeiras x Ponte Preta</b></p>
+            <div class="palpite">
+              <p><b>20:00 (Casa)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-burnley-x-brentford.html" target="_blank"
+      <a href="https://www.placardefutebol.com.br/campeonato-mineiro/16-03-2024-cruzeiro-x-tombense.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Cruzeiro x Tombense</b></p>
+            <div class="palpite">
+              <p><b>16:30 (Casa)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-baiano/16-03-2024-bahia-x-jequie.html" target="_blank"
         style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Burnley x Brentford</b></p>
+            <p><b>Bahia x Jequié</b></p>
             <div class="palpite">
-              <p><b>12:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-luton-town-x-nottingham-forest.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Luton Town x Nottingham Forest</b></p>
-            <div class="palpite">
-              <p><b>12:00</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-ingles/16-03-2024-fulham-x-tottenham.html" target="_blank"
-        style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Fulham x Tottenham</b></p>
-            <div class="palpite">
-              <p><b>14:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <div class="topPaginaPages">Bundesliga</div>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-union-berlin-x-werder-bremen.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Union Berlin x Werder Bremen</b></p>
-            <div class="palpite">
-              <p><b>11:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-wolfsburg-x-augsburg.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Wolfsburg x Augsburg</b></p>
-            <div class="palpite">
-              <p><b>11:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-mainz-05-x-bochum.html" target="_blank"
-        style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Mainz 05 x Bochum</b></p>
-            <div class="palpite">
-              <p><b>11:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-alemao/16-03-2024-heidenheim-x-borussia-mgladbach.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Heidenheim x Borussia Mgladbach</b></p>
-            <div class="palpite">
-              <p><b>11:30</b></p>
-            </div>
-          </div>
-        </div>
-      </a>
-    </li>
-  </ul>
-  <ul class="accordion-pages">
-    <li>
-      <a href="https://www.placardefutebol.com.br/uefa-europe-league/14-03-2024-liverpool-x-sparta-praha.html"
-        target="_blank" style="text-decoration: none;">
-        <div class="dropdownlink">
-          <div class="time">
-            <p><b>Darmstadt 98 x Bayern München</b></p>
-            <div class="palpite">
-              <p><b>11:30</b></p>
+              <p><b>16:00 (Casa)</b></p>
             </div>
           </div>
         </div>
@@ -143,9 +66,38 @@
         target="_blank" style="text-decoration: none;">
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Hoffenheim x Stuttgart</b></p>
+            <p><b>Darmstadt 98 x Bayern München</b></p>
             <div class="palpite">
-              <p><b>14:30</b></p>
+              <p><b>11:30 (Fora)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="accordion-pages">
+    <li>
+      <a href="https://www.placardefutebol.com.br/campeonato-espanhol/16-03-2024-osasuna-x-real-madrid.html"
+        target="_blank" style="text-decoration: none;">
+        <div class="dropdownlink">
+          <div class="time">
+            <p><b>Osasuna x Real Madrid</b></p>
+            <div class="palpite">
+              <p><b>12:15 (Fora)</b></p>
+            </div>
+          </div>
+        </div>
+      </a>
+    </li>
+  </ul>-->
+  <ul class="accordion-pages">
+    <li>
+      <a href="/img/1gol1tempol_1703.PNG"
+        target="_blank" widht = "100%" height = "100%" >
+        <div class="dropdownlink">
+          <div class="time">
+            <p><u><b>Ver Bilhete</b></u></p>
+            <div class="palpite">
             </div>
           </div>
         </div>
