--- a/pages/ResultadoFinal/ResultadoFinal.html
+++ b/pages/ResultadoFinal/ResultadoFinal.html
@@ -10,12 +10,12 @@
   <link rel="stylesheet" href="/CSS/global.css" />
   <link rel="stylesheet" href="/CSS/home.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2120302517738107"
-  crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div class="topPagina" style="font-size: 20px; text-align: center; "><b>Dia 14/03/2024 Resultado Final</b></div>
-  <ul class="accordion-pages">
+  <!--<ul class="accordion-pages">
     <li>
       <a href="https://www.placardefutebol.com.br/campeonato-paulista/16-03-2024-palmeiras-x-ponte-preta.html"
         target="_blank" style="text-decoration: none;">
@@ -89,16 +89,15 @@
         </div>
       </a>
     </li>
-  </ul>
+  </ul>-->
   <ul class="accordion-pages">
     <li>
-      <a href="https://www.placardefutebol.com.br/campeonato-espanhol/16-03-2024-getafe-x-girona.html" target="_blank"
-        style="text-decoration: none;">
+      <a href="/img/ResultadoFinal_1703.PNG"
+        target="_blank" widht = "100%" height = "100%" >
         <div class="dropdownlink">
           <div class="time">
-            <p><b>Getafe x Girona</b></p>
+            <p><u><b>Ver Bilhete</b></u></p>
             <div class="palpite">
-              <p><b>14:30 (Fora ou Empate)</b></p>
             </div>
           </div>
         </div>
